# ZPR-Projekt

./: .Makefile.swp  .gitignore  README.md
python_scripts/: client.py
src/: ZPR.pro  config.qdocconf.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Dokumentacja Game/html/: actions_8h_source.html  annotated.html  blockingui_8h_source.html  chatclient_8h_source.html  class_actions-members.html  class_actions.html  classes.html  (+22 more)
src/Game/: CMakeLists.txt  Doxyfile  Game.pro  ZPR.pro  action.h  action.h.autosave  actions.cpp  actions.h  affair.h  blockingui.cpp  blockingui.cpp.autosave  blockingui.h  blockingui.ui  card.h  chatclient.cpp  chatclient.h  eu.cpp  gamelistdialog.cpp  gamelistdialog.h  gamelistdialog.ui  gamelogic.cpp  gamelogic.h  gameplayer.cpp  gameplayer.h  localbiznesman.cpp  localbiznesman.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  media.cpp  onz.h  player.cpp  player.h  playerlistdialog.cpp  playerlistdialog.h  playerlistdialog.ui  police.h  russia.h  session.h  (+2 more)
src/Game/actions/: affair.cpp  affair.h  affair.h.autosave  eu.h  eu.h.autosave  localbiznesman.cpp  localbiznesman.h  media.cpp  media.h  onz.cpp  onz.h  police.cpp  police.h  protest.cpp  protest.h  russia.cpp  russia.h  russia.h.autosave  session.h  usa.cpp  usa.h
src/Mutual/: action.cpp  action.h  card.cpp  card.h  player.cpp  player.h
src/Server/: CMakeLists.txt  Doxyfile  QtSimpleChatServer.pro  Server.pro  action.cpp  action.h  actions.cpp  actions.h  card.cpp  card.h  cardstack.cpp  cardstack.h  chatserver.cpp  chatserver.h  chatserver.h.autosave  logicmodel.cpp  logicmodel.h  player.cpp  player.h  serverplayer.cpp  serverplayer.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  serverworker.cpp  serverworker.h  session.cpp  session.cpp.autosave  session.h
src/build-Game-Desktop-Debug/: Game  Makefile  moc_action.cpp  moc_chatclient.cpp  moc_gamelogic.cpp  moc_mainwindow.cpp  moc_player.cpp  ui_mainwindow.h
src/build-Game-Desktop_Qt_5_12_5_MSVC2015_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Game.Debug  object_script.Game.Release
src/build-Game-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src/build-Game-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  compile_commands.json  ui_mainwindow.h
src/build-Game-Desktop_x86_windows_msvc2019_pe_64bit-Profile/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
src/build-QtSimpleChatServer-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src/build-Server-Desktop-Debug/: Makefile  Makefile.Debug  Makefile.Release  QtSimpleChatServer  ui_serverwindow.h
src/build-Server-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_serverwindow.h
src/build-ZPR-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.ZPR.Debug  object_script.ZPR.Release  ui_mainwindow.h
src/cpp/: Card.h
src/game_build/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_gamelistdialog.h  ui_mainwindow.h
src/python_scripts/: server.py
src/server_build/: Makefile  Makefile.Debug  Makefile.Release  ui_serverwindow.h
(+173 files in other folders)
